--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ button{
 .search-button{
     width: 30%;
     text-align: center;
-    padding: 20px;
+    padding: 30px;
+    margin-right: 20px;
     
 }
 /* buttom desin css */
