--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body{
     margin: 0;
     font-family: 'STIX Two Math', serif;
     background-color: rgb(246, 244, 244);
+    width: fit-content;
+    height: fit-content;
 }
 .display-flex{
     display: flex;
@@ -159,8 +161,10 @@ button{
     height: fit-content;
 }
 .social-trafic-div img{
-    width: 15%;
+    width: 10%;
+    height: 20%;
     margin-top: 20px;
+    border-radius: 10px;
 }
   /* social trafic css end */
 
