--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    font-family: 'STIX Two Math', serif;
+    font-family: 'Poppins', sans-serif;
     background-color: rgb(246, 244, 244);
     width: fit-content;
     height: fit-content;
